--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,17 @@
       "version": "0.2.0",
       "configurations": [
             {
-                  "type": "pwa-chrome",
+                  "name": "Launch Chrome",
                   "request": "launch",
-                  "name": "Launch Chrome against localhost",
-                  "url": "http://localhost:8080",
+                  "type": "pwa-chrome",
+                  "url": "http://localhost:4200",
                   "webRoot": "${workspaceFolder}"
-            }
+            },
+            {
+                  "command": "npm run start",
+                  "name": "debug",
+                  "request": "launch",
+                  "type": "node-terminal"
+            },
       ]
 }
