--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // Per altre informazioni, visitare: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Launch Edge",
             "request": "launch",
@@ -20,9 +21,9 @@
     },
         {
             "command": "npm run start",
-            "name": "Npm student-course",
+            "name": "Debug",
             "request": "launch",
             "type": "node-terminal"
-        },
+        }
     ]
 }
