--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "prettier": "^2.5.1",
+    "dayjs": "^1.10.7"
   }
 }
